@@ -5,6 +5,9 @@ What's New for OpenJPEG
 ! : changed
 + : added
 
+October 31, 2006
++ [Antonin] added the ability to specify the rate as "float" (before : integer)
+
 August 18, 2006
 * [Antonin] fixed a bug in j2k_to_image.c, that prevented the -l option to work correctly.
 
